# src/raj-api/Data/Models/Dependency.cs
@@ -20,5 +20,8 @@ namespace RajApi.Data.Models
         public virtual long? BelongsTo { get; set; }
         [JsonIgnore]
         public virtual Dependency? Belongs { get; set; }
+
+        [JsonIgnore]
+        public virtual ICollection<Activity>? Activity { get; set; }
     }
 }
